<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.msu.stanospa.teamgoldfinch_project1.SelectionActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bird_selection_info"
        android:id="@+id/textView"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical" />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:id="@+id/selectParrot"
        android:src="@drawable/parrot"
        android:contentDescription="@string/selectable_parrot"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:id="@+id/selectHummingbird"
        android:layout_gravity="center_horizontal|right"
        android:src="@drawable/hummingbird"
        android:layout_weight="1"
        android:contentDescription="@string/selectable_hummingbird" />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:id="@+id/selectDonald"
        android:layout_gravity="center_horizontal|left"
        android:src="@drawable/donald"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/selectable_donald" />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:id="@+id/selectOstrich"
        android:src="@drawable/ostrich"
        android:contentDescription="@string/selectable_ostrich"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/confirm_selection"
        android:id="@+id/button"
        android:onClick="onConfirmSelection"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".5" />
</LinearLayout>
