<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:weightSum="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_title"
            android:id="@+id/gameTitle"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:textSize="48sp"
            android:gravity="center" />

        <ImageView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/parrot"
            android:layout_weight="0.33"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_1_name"
            android:id="@+id/player1Text"
            android:textSize="32sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player1EditText"
            android:layout_marginBottom="20dp"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_2_name"
            android:id="@+id/player2Text"
            android:layout_gravity="center_horizontal|left"
            android:textSize="32sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player2EditText"
            android:layout_marginBottom="25dp"
            android:inputType="textCapWords" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/startGame"
        android:onClick="onConfirmSelection"
        android:textSize="24sp" />
</LinearLayout>
